feat: `cli` features and enhancements
- feat: concept of runtime-embedded "self tests"
- feat: add `selftest` command with real tests
- feat: add `selfupdate` command which updates from releases posted
  to github in the `elide-dev/releases` repo
- feat: adapt mosaic jest sample for new self-test runner
- feat: add `help` command for filing a bug or feature request
- chore: work toward jpms support
- chore: support for magic progress bar
- chore: support for semver parsing

Signed-off-by: Sam Gammon <sam@elide.ventures>